# Steel-Sync

./: .gitignore  80MM_PRINTER_TEST_GUIDE.md  AGGRESSIVE_PERFORMANCE_OPTIMIZATION_IMPLEMENTED.md  AUTOMATIC_MIGRATION_SYSTEM_COMPLETE.md  AUTO_BACKUP_PRODUCTION_ANALYSIS.md  AUTO_CREDIT_ALLOCATION_FIX_TEST.cjs  AUTO_CREDIT_ALLOCATION_TEST.cjs  BACKUP_CLEANUP_LOGIC_FIXED.md  BACKUP_DASHBOARD_OPTIMIZATION_COMPLETE.md  BACKUP_INTEGRATION_GUIDE.md  BACKUP_PAGE_DEEP_ANALYSIS.md  BACKUP_PAGE_IMPROVEMENTS_IMPLEMENTED.md  BACKUP_SYSTEM_ANALYSIS.md  BACKUP_SYSTEM_COMPLETE.md  BACKUP_SYSTEM_IMPLEMENTATION.md  BALANCE-CONSISTENCY-ISSUE-RESOLVED.md  BALANCE-CONSISTENCY-SOLUTION.md  BALANCED_FONT_HIERARCHY_COMPLETE.md  BALANCE_RECALCULATION_TOOL.js  BALANCE_SIGN_CONVENTION_DIAGNOSIS.js  BALANCE_SYNC_TRIGGER.js  CASH_REFUND_FIX_COMPLETE.md  CENTRALIZED-DATABASE-ANALYSIS-COMPLETE.md  CENTRALIZED-DATABASE-COMPLIANCE-COMPLETE.md  CENTRALIZED-DATABASE-SOLUTION-COMPLETE.md  COMPLETE-SCHEMA-COMPATIBILITY-FIX.md  COMPLETE_6_SCENARIOS_ANALYSIS.md  COMPLETE_FRONTEND_PERFORMANCE_OPTIMIZATION_SUMMARY.md  COMPLETE_HORIZONTAL_SCROLL_FIX.md  COMPLETE_PERFORMANCE_OPTIMIZATION_SUMMARY.md  COMPLETE_SOLUTION_SUMMARY.md  COMPLETE_VENDOR_SYSTEM_FIX.md  COMPREHENSIVE-BALANCE-PERFORMANCE-FIXES.md  COMPREHENSIVE-BALANCE-SYSTEM-OVERHAUL.md  COMPREHENSIVE-SYSTEM-FIXES-APPLIED.md  COMPREHENSIVE_BACKUP_TESTING_PLAN.md  COMPREHENSIVE_CODE_REVIEW_COMPLETE.md  COMPREHENSIVE_FIX_VERIFICATION.cjs  COMPREHENSIVE_PRECISION_FIX_COMPLETE.md  COMPREHENSIVE_SYSTEM_FIX_VERIFICATION.cjs  (+323 more)
.git_disabled/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config
public/: automatic-overdue-updates-test.html  balance-consistency-fix-validator.html  balance-diagnostic-direct.html  check-misc-ledger-status.html  final-test.html  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  windows_support.rs
steel-store-management/src-tauri/: Cargo.toml  store.db  tauri.conf.json  tauri.conf.json5
steel-store-management/src-tauri/capabilities/: main.json
steel-store-management/src-tauri/data/: store.db
steel-store-management/src-tauri/src/: main.rs
(+1110 files in other folders)
