[package]
name = "itehad-iron-store"
version = "1.0.0"
description = "Itehad Iron Store Management System"
authors = ["Itehad Iron Store"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
